--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@ layout: default
     <div class="col-md-9 mb1">
       <div id="wrapper">
           <barchart data="bardata" caption="barcaptions" colors="activeColor" max="100"></barchart>
-          Balkendiagramm nach Gesamtergebnis sortiert. Stand der Erhebung: März 2021
+          Balkendiagramm nach Gesamtergebnis sortiert. Stand der Erhebung: März 2022
+          
+          Die Ergebnisse des Rankings von 2021 finden Sie zum Vergleich hier: 
+          <div class="col-md-6">
+            <p class="download">
+              <a href="https://www.transparency.de/aktuelles/detail/article/die-neue-csr-direktive-der-eu/index.php?eID=tx_securedownloads&p=36&u=0&g=0&t=1646753194&hash=2a86a8714dad9ce8cd1fea66c614de9669e7c3f1&file=/fileadmin/Redaktion/Mitgliederbereich_Intern/Arbeitsgruppen/Politik/Ergebnisse_Lobbyranking_2021-zusammengefuegt.pdf">
+                <span class="fa fa-download">&nbsp;&nbsp;</span>Ergebnisse Lobbyranking 2021 <br />  pdf | <1MB
           <br>
           <br>
           <br>
@@ -38,7 +44,7 @@ layout: default
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2">
     <p>
-      Während es auf der Ebene des Bundes in Bezug auf die Tätigkeit der LobbyistInnen (<b>verpflichtendes Lobbyregister</b>), den externen Einfluss auf Gesetzesentwürfe (<b>legislativer Fußabdruck</b>), den Wechsel von Regierungsmitglieder in die Wirtschaft nach ihrem Ausscheiden aus dem Amt (<b>Karenzzeitvorschriften</b>), sowie hinsichtlich der Pflichten, welche den Abgeordneten bei der Ausübung ihres Mandats obliegen (<b>Verhaltensregeln</b>), in den letzten Jahren gewisse regulatorische Fortschritte gegeben hat, oder voraussichtlich bald geben dürfte, ist in den Bundesländern Vergleichbares allenfalls nur ansatzweise und sehr selektiv festzustellen.
+      Während es auf der Ebene des Bundes in Bezug auf die Tätigkeit der LobbyistInnen (<b>verpflichtendes Lobbyregister</b>), den externen Einfluss auf Gesetzesentwürfe (<b>legislativer Fußabdruck</b>), den Wechsel von Regierungsmitglieder in die Wirtschaft nach ihrem Ausscheiden aus dem Amt (<b>Karenzzeitvorschriften</b>), sowie hinsichtlich der Pflichten, welche den Abgeordneten bei der Ausübung ihres Mandats obliegen (<b>Verhaltensregeln</b>), in den letzten Jahren regulatorische Fortschritte gegeben hat, oder voraussichtlich bald geben dürfte, ist in den Bundesländern Vergleichbares allenfalls nur ansatzweise und sehr selektiv festzustellen.
     </p>
     <br>
   </div>
