--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ layout: default
       <div id="wrapper">
           <barchart data="bardata" caption="barcaptions" colors="activeColor" max="100"></barchart>
           Balkendiagramm nach Gesamtergebnis sortiert. Stand der Erhebung: März 2022
-          
+   </div>
+   <p>
           Die Ergebnisse des Rankings von 2021 finden Sie zum Vergleich hier: 
           <div class="col-md-6">
             <p class="download">
