--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
   <div class="row">
   <div class="text-center col-md-offset-1 col-md-10">
-    <h1 class="">Lobbyranking der Bundesländer</h1>
+    <h1 class="">Lobbyranking der Bundesländer 2022</h1>
     <p>
       Transparency Deutschland hat ein Ranking für die vier wichtigsten Bereiche der politischen Integrität erstellt, um die Bundesländer untereinander vergleichen zu können.
       Für das Funktionieren einer Demokratie ist die Integrität der handelnden Personen von nicht zu unterschätzender Bedeutung. In besonderem Maße gilt dies für den Prozess der Entstehung der Gesetze.
@@ -29,6 +29,7 @@ layout: default
           Balkendiagramm nach Gesamtergebnis sortiert. Stand der Erhebung: März 2022
           
           <br>
+          <br>
         
           Die Ergebnisse des Rankings von 2021 finden Sie zum Vergleich hier:
           <br>
@@ -46,7 +47,7 @@ layout: default
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2">
     <p>
-      Während es auf der Ebene des Bundes in Bezug auf die Tätigkeit der LobbyistInnen (<b>verpflichtendes Lobbyregister</b>), den externen Einfluss auf Gesetzesentwürfe (<b>legislativer Fußabdruck</b>), den Wechsel von Regierungsmitglieder in die Wirtschaft nach ihrem Ausscheiden aus dem Amt (<b>Karenzzeitvorschriften</b>), sowie hinsichtlich der Pflichten, welche den Abgeordneten bei der Ausübung ihres Mandats obliegen (<b>Verhaltensregeln</b>), in den letzten Jahren regulatorische Fortschritte gegeben hat, oder voraussichtlich bald geben dürfte, ist in den Bundesländern Vergleichbares allenfalls nur ansatzweise und sehr selektiv festzustellen.
+      Nachdem das Ranking im März 2021 das erste Mal erstellt wurde, hat es einiges an Bewegung gegeben. Sowohl im Bund als auch in den Ländern hat die Politik zum Teil auf die Lobbyskandale (Aserbaidschanaffäre, Maskenskandal, Aufarbeitung Wirecard etc.) in 2021 reagiert und versucht, mit verbesserten Integritätsregeln das beschädigte Vertrauen der Gesellschaft zu reparieren. Während es auf der Ebene des Bundes in Bezug auf die Tätigkeit der LobbyistInnen (<b>verpflichtendes Lobbyregister</b>), den externen Einfluss auf Gesetzesentwürfe (<b>legislativer Fußabdruck</b>), den Wechsel von Regierungsmitglieder in die Wirtschaft nach ihrem Ausscheiden aus dem Amt (<b>Karenzzeitvorschriften</b>), sowie hinsichtlich der Pflichten, welche den Abgeordneten bei der Ausübung ihres Mandats obliegen (<b>Verhaltensregeln</b>), in den letzten Jahren regulatorische Fortschritte gegeben hat, oder voraussichtlich bald geben dürfte, erreichen 15 von 16 Bundesländer nicht mal die Hälfte der möglichen Transparenzpunkte.
     </p>
     <br>
   </div>
@@ -60,7 +61,7 @@ layout: default
     <!--</div>-->
     <h2>Warum haben wir das Lobbyranking erstellt?</h2>
     <p>
-      Auf Länderebene hat sich bei den Integritätsregeln in letzter Zeit wenig getan. Die Arbeitsgruppe Politik von Transparency Deutschland hat sich daher in der Verantwortung gesehen, eine umfassende Untersuchung durchzuführen und die Ergebnisse zu veröffentlichen. Zweck der Bemühungen ist, die Öffentlichkeit in dieser für das Gemeinwohl sehr bedeutsamen Angelegenheit zu sensibilisieren sowie bei den verantwortlichen Entscheidungsträgern ein Bewusstsein für die Notwendigkeit möglichst schneller und einheitlicher regulatorischer Änderungen zu schaffen. Erstmalig wurde in leicht verständlicher und transparenter Form für jedes einzelne Bundesland ermittelt, ob und falls ja, in welchem Umfang in den vier genannten Gebieten Integritätsvorschriften existieren. Die Ergebnisse wurden in einem aussagekräftigen <b>Lobbyranking</b> zusammengefasst.
+      Auf Länderebene hat sich bei den Integritätsregeln bis 2021 wenig getan. Die Arbeitsgruppe Politik von Transparency Deutschland hat sich daher in der Verantwortung gesehen, eine umfassende Untersuchung durchzuführen und die Ergebnisse zu veröffentlichen. Zweck der Bemühungen ist, die Öffentlichkeit in dieser für das Gemeinwohl sehr bedeutsamen Angelegenheit zu sensibilisieren sowie bei den verantwortlichen Entscheidungsträgern ein Bewusstsein für die Notwendigkeit möglichst schneller und einheitlicher regulatorischer Änderungen zu schaffen. Erstmalig wurde in leicht verständlicher und transparenter Form für jedes einzelne Bundesland ermittelt, ob und falls ja, in welchem Umfang in den vier genannten Gebieten Integritätsvorschriften existieren. Die Ergebnisse wurden in einem aussagekräftigen <b>Lobbyranking</b> zusammengefasst,  2021 erstmalig veröffentlicht und seither einmal jährlich aktualisiert.
     </p>
 
     <h2>So haben wir getestet</h2>
