--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: default
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2">
     <p>
-      Nachdem das [Ranking im März 2021](https://www.transparency.de/aktuelles/detail/article/lobbyranking-der-bundeslaender-vorgestellt/index.php?eID=tx_securedownloads&p=36&u=0&g=0&t=1646916320&hash=3dc5b5883245aa4c5882258bc9e0f1ec7c0bb89b&file=/fileadmin/Redaktion/Mitgliederbereich_Intern/Arbeitsgruppen/Politik/Ergebnisse_Lobbyranking_2021-zusammengefuegt.pdf) erstmalig erstellt wurde, hat es einige Veränderungen gegeben. Sowohl im Bund als auch in den Ländern wurde unter anderem auf die Lobbyskandale des letzten Jahres - Aserbaidschanaffäre, Maskenskandal, Aufarbeitung Wirecard und Cum-Ex - reagiert und versucht, mit verbesserten Integritätsregeln das beschädigte Vertrauen der Gesellschaft zu reparieren. Auf der Ebene des Bundes hat es in Bezug auf die Tätigkeit der LobbyistInnen (<b>verpflichtendes Lobbyregister</b>), den externen Einfluss auf Gesetzesentwürfe (<b>legislativer Fußabdruck</b>), den Wechsel von Regierungsmitglieder in die Wirtschaft nach ihrem Ausscheiden aus dem Amt (<b>Karenzzeitvorschriften</b>), sowie hinsichtlich der Pflichten, welche den Abgeordneten bei der Ausübung ihres Mandats obliegen (<b>Verhaltensregeln</b>), in den letzten Jahren regulatorische Fortschritte gegeben, oder wird es voraussichtlich bald geben. Bei den Bundesländern erreichen weiterhin 15 von 16 Ländern nicht mal die Hälfte der möglichen Transparenzpunkte.
+      Seitdem das Ranking im März 2021 erstmalig erstellt wurde, hat es einige Veränderungen gegeben. Sowohl im Bund als auch in den Ländern wurde unter anderem auf die Lobbyskandale des letzten Jahres - Aserbaidschanaffäre, Maskenskandal, Aufarbeitung Wirecard und Cum-Ex - reagiert und versucht, mit verbesserten Integritätsregeln das beschädigte Vertrauen der Gesellschaft zu reparieren. Auf der Ebene des Bundes hat es in Bezug auf die Tätigkeit der LobbyistInnen (<b>verpflichtendes Lobbyregister</b>), den externen Einfluss auf Gesetzesentwürfe (<b>legislativer Fußabdruck</b>), den Wechsel von Regierungsmitglieder in die Wirtschaft nach ihrem Ausscheiden aus dem Amt (<b>Karenzzeitvorschriften</b>), sowie hinsichtlich der Pflichten, welche den Abgeordneten bei der Ausübung ihres Mandats obliegen (<b>Verhaltensregeln</b>), in den letzten Jahren regulatorische Fortschritte gegeben, oder wird es voraussichtlich bald geben. Bei den Bundesländern erreichen weiterhin 15 von 16 Ländern nicht mal die Hälfte der möglichen Transparenzpunkte.
     </p>
     <br>
   </div>
@@ -71,7 +71,7 @@ layout: default
 
     <h3>So wurde gewichtet</h3>
     <p>
-      Die vier Variablen flossen zu je einem Viertel in die Bewertung ein. Die Variablen selbst bestehen aus verschiedenen Untervariablen mit teils unterschiedlicher Gewichtung. Diese können im Detail für jedes einzelne Bundesland nachvollzogen werden.
+      Die vier Variablen flossen zu je einem Viertel in die Bewertung ein und haben eine Maximalpunktzahl von 50 Punkten. Die Variablen selbst bestehen aus verschiedenen Unterkategorien mit teils unterschiedlicher Gewichtung. Anhang fester Kriterien wurden die Unterkategorien der vier Bereiche bewertet. Das Bewertungsschema finden Sie in der verlinkten Excel im Footer. Die Ergebnisse der einzelnen Kategorien können grafisch im Detail für jedes einzelne Bundesland auf den Länderseiten nachvollzogen werden.
     </p>
 
     <br><br>
