--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ layout: default
 
     <h2>So haben wir getestet</h2>
     <p>
-      In allen 16 deutschen Bundesländern wurden die Regeln zur Sicherstellung von Transparenz und Integrität überprüft. Sowohl die parlamentarischen Regelungen, als auch die, die für Regierung und Ministerien gelten, wurden einbezogen. Dabei wurde zwischen Karenzzeitregelungen beim Ausscheiden aus dem Amt, Lobbyregister, legislativem Fußabdruck sowie Verhaltensregeln unterschieden. Für jedes Bundesland wurden die entsprechenden Gesetzentwürfe betrachtet und anhand fester Kriterien (siehe unten) bewichtet. Regelungen auf Bundesebene wurden teils mitbetrachtet, sind aber im Ranking nur bedingt vergleichbar.
+      In allen 16 deutschen Bundesländern wurden die Regeln zur Sicherstellung von Transparenz und Integrität überprüft. Sowohl die parlamentarischen Regelungen, als auch die, die für Regierung und Ministerien gelten, wurden einbezogen. Dabei wurde zwischen Karenzzeitregelungen beim Ausscheiden aus dem Amt, Lobbyregister, legislativem Fußabdruck sowie Verhaltensregeln unterschieden. Für jedes Bundesland wurden die entsprechenden Gesetzentwürfe betrachtet und anhand fester Kriterien (siehe unten) gewichtet. Regelungen auf Bundesebene wurden teils mitbetrachtet, sind aber im Ranking nur bedingt vergleichbar.
     </p>
 
     <h3>So wurde gewichtet</h3>
