--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
         
           Die Ergebnisse des Rankings von 2021 finden Sie zum Vergleich hier:
           <br>
-          <a href="https://www.transparency.de/aktuelles/detail/article/update-des-lobbyrankings-der-bundeslaender-trotz-leichter-verbesserungen-noch-viel-luft-nach-oben/index.php?eID=tx_securedownloads&p=36&u=0&g=0&t=1647368781&hash=677b60b1da1db4ae416bf9333d8d8214f4225553&file=/fileadmin/Redaktion/Mitgliederbereich_Intern/Arbeitsgruppen/Politik/Ergebnisse_Lobbyranking_2021-zusammengefuegt.pdf">
+          <a href="https://github.com/TransparencyGermany/lrd/blob/master/static/files/Ergebnisse%20Lobbyranking%202021-zusammengef%C3%BCgt.pdf">
             <span class="fa fa-download">&nbsp;&nbsp;</span>Ergebnisse Lobbyranking 2021 <br />  pdf | <1MB
           </a>
         <br>
