--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
         
           Die Ergebnisse des Rankings von 2021 finden Sie zum Vergleich hier:
           <br>
-          <a href="https://github.com/TransparencyGermany/lrd/blob/master/static/files/Ergebnisse%20Lobbyranking%202021-zusammengef%C3%BCgt.pdf">
+          <a href="https://raw.githubusercontent.com/TransparencyGermany/lrd/master/static/files/Ergebnisse%20Lobbyranking%202021-zusammengef%C3%BCgt.pdf">
             <span class="fa fa-download">&nbsp;&nbsp;</span>Ergebnisse Lobbyranking 2021 <br />  pdf | <1MB
           </a>
         <br>
