--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@ layout: default
   <div class="text-center col-md-offset-1 col-md-10">
     <h1 class="">Lobbyranking der Bundesländer 2022</h1>
     <p>
-      Transparency Deutschland hat ein Ranking für die vier wichtigsten Bereiche der politischen Integrität erstellt, um die Bundesländer untereinander vergleichen zu können.
-      Für das Funktionieren einer Demokratie ist die Integrität der handelnden Personen von nicht zu unterschätzender Bedeutung. In besonderem Maße gilt dies für den Prozess der Entstehung der Gesetze.
+      Für unsere Demokratie ist die Transparenz und damit Nachvollziehbarkeit politischen Handelns unerlässlich. Um das Vertrauen in die demokratischen Institutionen und die Integrität der handelnden Personen zu stärken, sind moderne Regeln nötig.  
+
+Das Ranking von Transparency Deutschland bietet einen übersichtlichen Vergleich der Transparenz- und Integritätsregeln in Deutschland. Wir bewerten, ob ein Lobbyregister, ein legislativer Fußabdruck, eine Karenzzeit für Regierungsmitglieder und eine Offenlegung von Nebentätigkeiten vorhanden sind – und wenn ja, in welcher Form. Auf dieser Grundlage entsteht das Lobbyranking. 
+
+Unsere interaktive Webseite ermöglicht Ihnen, nach den Themenfeldern sowie nach den Bundesländern zu filtern und sich mit den Details der Regelungen vertraut zu machen. 
     </p>
     <br><br><br>
   </div>
