--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@ Unsere interaktive Webseite ermöglicht Ihnen, nach den Themenfeldern sowie nach
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2">
     <p>
-      Seitdem das Ranking im März 2021 erstmalig erstellt wurde, hat es einige Veränderungen gegeben. Sowohl im Bund als auch in den Ländern wurde unter anderem auf die Lobbyskandale des letzten Jahres - Aserbaidschanaffäre, Maskenskandal, Aufarbeitung Wirecard und Cum-Ex - reagiert und versucht, mit verbesserten Integritätsregeln das beschädigte Vertrauen der Gesellschaft zu reparieren. Auf der Ebene des Bundes hat es in Bezug auf die Tätigkeit der LobbyistInnen (<b>verpflichtendes Lobbyregister</b>), den externen Einfluss auf Gesetzesentwürfe (<b>legislativer Fußabdruck</b>), den Wechsel von Regierungsmitgliedern in die Wirtschaft nach ihrem Ausscheiden aus dem Amt (<b>Karenzzeitvorschriften</b>), sowie hinsichtlich der Pflichten, welche den Abgeordneten bei der Ausübung ihres Mandats obliegen (<b>Verhaltensregeln</b>), in den letzten Jahren regulatorische Fortschritte gegeben, oder wird es voraussichtlich bald geben. Bei den Bundesländern erreichen weiterhin leider 15 von 16 Ländern nicht mal die Hälfte der möglichen Transparenzpunkte.
+      Sowohl im Bund als auch in einigen Ländern haben sich in den vergangenen Jahren – auch ausgelöst durch Skandale wie die Aserbaidschanaffäre, den Maskenskandal, Wirecard und Cum-Ex – die Transparenz- und Integritätsregeln spürbar verbessert. Im Lobbyranking 2024 haben sich 12 der 16 Bundesländer gegenüber dem Lobbyranking 2022 leicht verbessert. 
+
+Dennoch erreichen 13 Bundesländer auch im Lobbyranking 2024 nicht einmal die Hälfte der möglichen Transparency-Kriterien. Die Spanne zwischen dem besten Bundesland Thüringen (69 % der erreichbaren Punkte) und am schwächsten abschneidenden Bundesland Bremen (9 % der erreichbaren Punkte) ist enorm. Ein Großteil der Bundesländer bietet damit noch immer zu wenig Nachvollziehbarkeit von politischen Entscheidungen für die Bürgerinnen und Bürger und zu viele Möglichkeiten für potenzielle illegitime Lobby-Einflussnahme 
+
+Thüringen, das 69% der Kriterien erfüllt, konnte dank des im Juni 2024 vorgelegten Lobbyregisters seinen Spitzenplatz im Ranking souverän behaupten. Auf den folgenden Plätzen vergrößern Bayern (54%) und Baden-Württemberg (53%) dank neuer Karenzzeitregeln ihren Abstand zum Mittelfeld. In der Gesamtschau schneidet der Bund dank mittlerweile insgesamt recht guter Lobby- und Transparenzregeln mit 71% besser ab als alle Bundesländer. 
+
+In der unteren Hälfte steigt Sachsen (24%) durch die Einführung von Karenzzeiten für ausscheidende Regierungsmitglieder um fünf Plätze auf und landet auf Platz 10 des Lobbyrankings 2024. Andererseits verlieren Rheinland-Pfalz (19%), Niedersachsen (19%) und Sachsen-Anhalt (18%) aufgrund von Inaktivität vier bzw. drei Plätze und befinden sich auf den Rängen 13, 14 sowie 15. Die „rote Laterne“ behält Bremen (9%). 
     </p>
     <br>
   </div>
