--- a/index.html
+++ b/index.html
@@ -70,12 +70,16 @@ In der unteren Hälfte steigt Sachsen (24%) durch die Einführung von Karenzzeit
     <!--</div>-->
     <h2>Warum haben wir das Lobbyranking erstellt?</h2>
     <p>
-      Auf Länderebene hat sich bei den Integritätsregeln bis 2021 wenig getan. Die Arbeitsgruppe Politik von Transparency Deutschland hat sich daher in der Verantwortung gesehen, eine umfassende Untersuchung durchzuführen und die Ergebnisse zu veröffentlichen. Zweck der Bemühungen ist, die Öffentlichkeit in dieser für das Gemeinwohl sehr bedeutsamen Angelegenheit zu sensibilisieren sowie bei den verantwortlichen Entscheidungsträgern ein Bewusstsein für die Notwendigkeit möglichst schneller und einheitlicher regulatorischer Änderungen zu schaffen. Erstmalig wurde in leicht verständlicher und transparenter Form für jedes einzelne Bundesland ermittelt, ob und falls ja, in welchem Umfang in den vier genannten Gebieten Integritätsvorschriften existieren. Die Ergebnisse wurden in einem aussagekräftigen <b>Lobbyranking</b> zusammengefasst,  2021 erstmalig veröffentlicht und werden einmal jährlich aktualisiert.
+      Auf Länderebene hatte sich bis 2021 bei den Integritätsregeln wenig getan. Die Arbeitsgruppe Politik von Transparency Deutschland sah sich daher in der Verantwortung, eine umfassende vergleichende Untersuchung durchzuführen und die Ergebnisse zu veröffentlichen. Zweck der Bemühungen war und ist es, die Öffentlichkeit in dieser für das Gemeinwohl sehr bedeutsamen Angelegenheit zu sensibilisieren sowie bei den verantwortlichen politischen Entscheidungstragenden ein Bewusstsein für die Notwendigkeit möglichst schneller und einheitlicher regulatorischer Änderungen zu schaffen.  
+
+Erstmalig wurde mit dem Lobbyranking 2021 am 11. März 2021 in leicht verständlicher und transparenter Form für jedes einzelne Bundesland ermittelt, ob und falls ja, in welchem Umfang in den vier genannten Gebieten Regeln existieren und welchen genauen Inhalt sie haben. Gerade auf dem Hintergrund aktueller Entwicklungen, die von bröckelndem Vertrauen in die demokratischen Institutionen bis hin zu Radikalisierungstendenzen reichen, gewinnen moderne Transparenz- und Integritätsregeln weiter zunehmend an Bedeutung.  
+
+Die Webseite www.lobbyranking.de wurde am 11. März 2021 erstmals veröffentlicht und am 10. März 2022 sowie am 13. August 2024 aktualisiert. 
     </p>
 
     <h2>So haben wir getestet</h2>
     <p>
-      In allen 16 deutschen Bundesländern wurden die Regeln zur Sicherstellung von Transparenz und Integrität überprüft. Sowohl die parlamentarischen Regelungen, als auch die, die für Regierung und Ministerien gelten, wurden einbezogen. Dabei wurde zwischen Karenzzeitregelungen beim Ausscheiden aus dem Amt, Lobbyregister, legislativem Fußabdruck sowie Verhaltensregeln unterschieden. Für jedes Bundesland wurden die entsprechenden Gesetzentwürfe betrachtet und anhand fester Kriterien (siehe unten) gewichtet. Regelungen auf Bundesebene wurden teils mitbetrachtet, sind aber im Ranking nur bedingt vergleichbar.
+      In allen 16 deutschen Bundesländern wurden die Regeln zur Sicherstellung von Transparenz und Integrität überprüft. Dabei wurde zwischen den Vorschriften zum Lobbyregister, zum legislativen Fußabdruck, zu den Karenzzeiten beim Ausscheiden aus dem Regierungsamt sowie zu den parlamentarischen Verhaltensregeln unterschieden. Für jedes Bundesland haben wir die entsprechenden gesetzlichen und innerparlamentarischen Regeln getrennt betrachtet und anhand fester Kriterien (siehe unten) gewichtet. Zu Vergleichszwecken sind die Regelungen des Bundes in das Ranking mit einbezogen.
     </p>
 
     <h3>So wurde gewichtet</h3>
