--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Unsere interaktive Webseite ermöglicht Ihnen, nach den Themenfeldern sowie nach
     <div class="col-md-9 mb1">
       <div id="wrapper">
           <barchart data="bardata" caption="barcaptions" colors="activeColor" max="100"></barchart>
-          Balkendiagramm nach Gesamtergebnis sortiert. Stand der Erhebung: März 2022
+          Balkendiagramm nach Gesamtergebnis sortiert. Stand der Erhebung: August 2024
           
           <br>
           <br>
