--- a/index.html
+++ b/index.html
@@ -103,5 +103,13 @@ Die Webseite www.lobbyranking.de wurde am 11. März 2021 erstmals veröffentlich
       Weitere Informationen sowie den Datensatz mit den Rohdaten finden Sie im Footer verlinkt.
     </p>
   </div>
+  <br><br>
+    <h2>Das Lobbyranking gibt es nur dank Ihnen!</h2>
+    <p>
+      Transparency Deutschland finanziert das Lobbyranking über Spenden und Förderbeiträge. Wenn Sie die Fortführung des Projekts unterstützen möchten, dann greifen Sie uns gern mit einem finanziellen Beitrag unter die Arme!
+    <br><br>
+      [Jetzt unterstützen](https://www.transparency.de/jetzt-spenden)
+    </p>
+    </div>
 </div>
 </div>
