--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Die Webseite www.lobbyranking.de wurde am 11. März 2021 erstmals veröffentlich
     <p>
       Transparency Deutschland finanziert das Lobbyranking über Spenden und Förderbeiträge. Wenn Sie die Fortführung des Projekts unterstützen möchten, dann greifen Sie uns gern mit einem finanziellen Beitrag unter die Arme!
     <br><br>
-      <a href="https://www.transparency.de/jetzt-spenden">Clickable Jetzt unterstützen</a>
+      <a href="https://www.transparency.de/jetzt-spenden">Jetzt unterstützen</a>
     </p>
     </div>
 </div>
